--- a/base_boxed_basic_2column_query.html
+++ b/base_boxed_basic_2column_query.html
@@ -921,7 +921,7 @@
 				}
 
 				table {
-					border-collapse: collapse !important
+					border-collapse: collapse !important;
 				}
 
 				#preheaderLeftContent {
