--- a/mailchimp/newsletter_buena_mailchimp.html
+++ b/mailchimp/newsletter_buena_mailchimp.html
@@ -1,3 +1,11 @@
+<!--
+ Bund der Pfadfinderinnen und Pfadfinder (BdP) Newsletter Template
+
+ @contributor	Christian Schrebe
+ @license     	http://creativecommons.org/licenses/by-sa/3.0/  Creative Commons Attribution-ShareAlike 3.0 Unported License
+ @version		v1.0.1
+-->
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
@@ -675,7 +683,7 @@
 				/* ======== Header Styles ======== */
 
 				#preheaderRow {
-					height: 75px;
+					height: 75px !important;
 				}
 
 				#templatePreheader{} /* Hide the template preheader to save space */
@@ -685,7 +693,7 @@
 				#preheaderMainContent{width:100% !important;}
 
 				#templateHeader{
-					margin-top: 0px;
+					margin-top: 0px !important;
 				}
 
 				/**
@@ -699,8 +707,8 @@
 					width:100% !important;
 				}
 				#headerTitel {
-					margin-left: 13px;
-					margin-top: -35px;
+					margin-left: 13px !important;
+					margin-top: -35px !important;
 				}
 
 				/**
@@ -715,20 +723,20 @@
 
 				/* ======== Column Styles ======== */
 				#templateColumns {
-					padding-left: 0px;
-					padding-right: 0px;
+					padding-left: 0px !important;
+					padding-right: 0px !important;
 				}
 
 				.templateColumnContainerLeft {
 					display: block !important;
 					width: 100% !important;
-					max-width: 480px;
+					max-width: 480px !important;
 				}
 
 				.templateColumnContainer {
 					display: block !important;
 					width: 100% !important;
-					max-width: 480px;
+					max-width: 480px !important;
 				}
 
 				.columnOne {display:block !important; width:100% !important;}
@@ -769,12 +777,12 @@
 				/* ======== Footer Styles ======== */
 
                 #templateFooter{
-					background: none;
-					background-image: none;
-					background-color: #FFCB04;
+					background: none !important;
+					background-image: none !important;
+					background-color: #FFCB04 !important;
 					width: 100% !important;
 					max-width: 480px !important;
-                    padding-bottom: 13px;
+                    padding-bottom: 13px !important;
                 }
 
 				#leftFooter {
@@ -789,7 +797,7 @@
 
 				#footerHeadline {
 					color: #1D4899 !important;
-					padding: 13px;
+					padding: 13px !important;
 				}
 
 				.footerContent a{display:block !important;} /* Place footer social and utility links on their own lines, for easier access */
