Artikel vor Bundesmail im Footer mit in den <span> Tag gesetzt

--- a/mailchimp/newsletter_buena_mailchimp.html
+++ b/mailchimp/newsletter_buena_mailchimp.html
@@ -1263,7 +1263,7 @@
 																Aktualisiere deine <a href="*|UPDATE_PROFILE|*">Benutzer
 																	Einstellungen</a>.
                                                                 *|ELSE:|*
-																Der <span mc:edit="footer_what">Stammesversand</span> wird
+																<span mc:edit="footer_what">Der Stammesversand</span> wird
 																an Funktionsträger und Interessierte im <span
 																		mc:edit="footer_targetGroup">Landesverband</span>
 																versandt.<br/>
