--- a/mailchimp/newsletter_buena_mailchimp.html
+++ b/mailchimp/newsletter_buena_mailchimp.html
@@ -3,7 +3,7 @@
 
  @contributor	Christian Schrebe
  @license     	http://creativecommons.org/licenses/by-sa/3.0/  Creative Commons Attribution-ShareAlike 3.0 Unported License
- @version		v1.0.1
+ @version		v1.0.2
 -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
@@ -345,6 +345,7 @@
 			}
 
 			#headerImage{
+				width: 640px;
 				height:auto;
 				max-width:640px;
 				box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
@@ -484,8 +485,16 @@
 
 			.leftColumnContent img, .rightColumnContent img{
 				display: block;
+				width:287px;
 				height:auto;
 				max-width:287px;
+			}
+
+			.columnImage {
+				display: block;
+				width:614px;
+				height:auto;
+				max-width:614px;
 			}
 
 			/* ========== Footer Styles ========== */
@@ -1095,7 +1104,7 @@
 															<table align="left" border="0" cellpadding="0" cellspacing="0" class="templateColumnContainer columnTwo">
 																<tr>
 																	<td class="leftColumnContent">
-																		<img src="http://cdn.pfadfinden.de/gfx/teaser/immenhausen_1.jpg" style="max-width:614px;" class="columnImage" mc:label="one_column_image" mc:edit="one_column_image" />
+																		<img src="http://cdn.pfadfinden.de/gfx/teaser/immenhausen_1.jpg" style="width:614px; max-width:614px;" class="columnImage" mc:label="one_column_image" mc:edit="one_column_image" />
 																		<table border="0" cellpadding="0" cellspacing="0" class="columnHeadline">
 																			<tr>
 																				<td>
