--- a/mailchimp/newsletter_buena_mailchimp.html
+++ b/mailchimp/newsletter_buena_mailchimp.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="http://cdn.pfadfinden.de/newsletter/print_1.css" type="text/css" media="print" charset="utf-8 "/>
         <style type="text/css">
 			/* /\/\/\/\/\/\/\/\/ CLIENT-SPECIFIC STYLES /\/\/\/\/\/\/\/\/ */
-			#outlook a{padding:0; !important;} /* Force Outlook to provide a "view in browser" message */
+			#outlook a{padding:0 !important;} /* Force Outlook to provide a "view in browser" message */
 			.ReadMsgBody{width:100%;} .ExternalClass{width:100%;} /* Force Hotmail to display emails at full width */
 			.ExternalClass, .ExternalClass p, .ExternalClass span, .ExternalClass font, .ExternalClass td, .ExternalClass div {line-height: 100%;} /* Force Hotmail to display normal line spacing */
 			body, table, td, p, a, li, blockquote{-webkit-text-size-adjust:100%; -ms-text-size-adjust:100%;} /* Prevent WebKit and Windows mobile changing default text sizes */
@@ -34,8 +34,8 @@
 
 			body, #bodyTable, #bodyCell {
 				height: 100% !important;
-				margin: 0; !important;
-				padding: 0; !important;
+				margin: 0 !important;
+				padding: 0 !important;
 				width: 100% !important;
 			}
 
